Classes and components creation. Small fixes.
- Created a module for the Timeline
- Created the service to fetch the data
- Spent hours solving problems with the angular 6 new bullshit :B

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,7 @@
     Vilous Timeline
   </span>
 </nav>
+<div id="mainContainer"
+     class="bg-darker">
+     <router-outlet></router-outlet>
+</div>
