--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-@import '~bootstrap/dist/css/bootstrap.min.css';
+
+$theme-colors: (
+  "darker": #1d2124
+);
+
+@import '~bootstrap/scss/bootstrap';
+
+html, body { height: 100%; }
 
 body {
   font-family: Roboto, sans-serif;
